UtahLiveDataTest/src/objects/JXPrograms__c.object
<CustomObject>
    <description>[Business] Used for mapping the Federal/State Announcements with the program</description>
    <fields>
        <fullName>AwardingAgencyCode__c</fullName>
        <formula>FederalProgram__r.AwardingAgencyCode__c</formula>
        <label>Awarding Agency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalProgramCFDA__c</fullName>
        <formula>FederalProgram__r.FederalProgramCFDA__c</formula>
        <label>Federal Program CFDA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalProgramTitle__c</fullName>
        <formula>FederalProgram__r.FederalProgramTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Program Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Federal Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Junction_For_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StateProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Junction_For_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Junction</label>
    <nameField>
        <displayFormat>JXPROG-{0000}</displayFormat>
        <label>Junction For Programs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>